[tool.poetry]
name = "dhiraagu-usage-notifier"
version = "0.1.0"
description = ""
authors = ["Naffah Abdulla Rasheed <mail@naffah.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.6.0"
python-dotenv = "^0.20.0"
beautifulsoup4 = "^4.11.1"
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
